--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  cursor: url(https://upload.wikimedia.org/wikipedia/commons/0/05/440-monkey.svg), auto;
 }
 
 @layer utilities {
