--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,8 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  cursor: url(https://upload.wikimedia.org/wikipedia/commons/0/05/440-monkey.svg), auto;
-  background-image: url("../../public/monkey_wallpaper.jpg");;
+  cursor: url("../../public/monkey_cursor.svg"), auto;
+  background-image: url("../../public/monkey_wallpaper.jpg");
 }
 
 @layer utilities {
