--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  cursor: url("../../public/monkey_cursor.svg"), auto;
+  cursor: url("../../public/banana_cursor.svg"), auto;
+  /* cursor: url("../../public/monkey_cursor.svg"), auto; */
   background-image: url("../../public/monkey_wallpaper.jpg");
 }
 
